--- a/document/main.tex
+++ b/document/main.tex
@@ -82,15 +82,13 @@
 %\newpage
 %
 
-% TODO update ToC with page numbers!
-
 \section{Introduction}
 
 
 \fbox{
-	\parbox{\textwidth}{I propose program analysis \emph{tool use} is a form of \emph{communication} and \emph{inability to resolve} notifications is a result of \emph{miscommunication}, therefore we can improve tool design by adopting a theory similar to \emph{constructivism} where tools can \emph{approximate} individual developer's \emph{conceptual knowledge} to adapt notifications, leading to \emph{reduced time and effort} required for developers to understand and resolve tool notifications.
-		}
+	\parbox{\textwidth}{I propose program analysis \emph{tool use} is a form of \emph{communication} and \emph{inability to resolve} notifications is a result of \emph{miscommunication}, therefore we can improve tool design by adopting a theory similar to \emph{constructivism} where tools can \emph{approximate} individual developer's \emph{conceptual knowledge} to adapt notifications, leading to \emph{reduced time and context-switching} required for developers to understand and resolve tool notifications.		}
 	}
+% TODO make sure later it's obvious how (and why) will assess time and context-switching
 %
 
 
