--- a/document/main.tex
+++ b/document/main.tex
@@ -164,7 +164,7 @@ Notifications across tools vary; some provide lots of text (like FindBugs), some
 The goal of EclEmma notifications is to statically show dynamic program behavior and help the developer determine the effectiveness of her test suite. Though EclEmma could use text to communicate code coverage, this takes away the ability to scan the program for areas in most need of attention; therefore, EclEmma uses colors applied directly to the source code to communicate. EclEmma uses other visuals, such as the bar visuals in the Coverage View (Figure~\ref{fig:ecl}) to show coverage on a given package or class.
  % TODO talk about how different parts of notification communicate for each tool; make sure it ties back to goals (defects and test coverage)!
 
-The list of tools and notifications tools use can go on and on, but for the purposes of my research, the general definition I will use for a notification is \emph{a combination of visual and textual information used by a program analysis tool to communicate a message to developers.} Even though notifications can vary regarding how they are designed, all notifications communicate about programming concepts, which I will discuss next.
+The list of tools and notifications tools use can go on and on, but for the purposes of my research, the general definition I will use for a notification is \emph{a combination of visual and textual information used by a program analysis tool to communicate a message to developers.} Notifications can vary regarding what information and how much detail they provide, however, all notifications communicate about programming concepts, which I will discuss next.
 
 \subsection{What do tools communicate about?}
 
