--- a/document/main.tex
+++ b/document/main.tex
@@ -182,7 +182,7 @@ As with verbal communication, the ability of a developer to interpret a tool's m
 
 \subsection{How do developers feel about program analysis tools?}
 % interactive interviews (icse) & %session study (fse)
-Despite the possibility program analysis tools provide for exploration and improvement of source code, research has found that consistent usage of tools like FindBugs is not frequent~\cite{Ayewah:2008:FindBugs}.
+Despite the possibility provided by program analysis tools for exploration and improvement of source code, research has found that developers often to not use tools like FindBugs~\cite{Ayewah:2008:FindBugs}.
 Though research explored tool usage, there was no research exploring what tool features developers use, what improvements they would like to see, and why~\cite{Bessey:2010:Coverity,Khoo:2008:PathProjection}.
 I will briefly outline my findings that led to my proposed research in this section; I will discuss the mentioned studies in more detail in Section~\ref{sec:eval}. Based on findings from these studies, I identified the following problems with the state-of-the-art in program analysis tool notification design:
 
