--- a/document/main.tex
+++ b/document/main.tex
@@ -188,7 +188,7 @@ I will briefly outline my findings that led to my proposed research in this sect
 
 \begin{itemize}
 	\item Tool notifications can be difficult to sort through and interpret, making them difficult to use.
-	\item Many notifications do not effectively and consistently communicate to individual developer knowledge.
+	\item Many notifications do not effectively and consistently communicate to accommodate individual developer knowledge.
 \end{itemize}
 
 To answer the question \emph{why do developers not use static analysis tools}, I conducted interactive interviews with 20 professional developers to better understand why they do not use static analysis tools, one type of program analysis tool, when writing code~\cite{johnson2013don}.
