--- a/document/main.tex
+++ b/document/main.tex
@@ -225,7 +225,7 @@ In order to adapt tool notifications to a given developer's knowledge, there nee
 
 \subsection{Using Concept Inventories to Assess Concept Knowledge}
 % TODO read through and revise as needed! 
-If I am to create models of any kind, I need a dependent variable and one or more independent variables that could be used to predict the value of the dependent variable. Since I propose models that predict knowledge, my dependent variable has to be some measure of developer concept knowledge.
+To create any kind of model, I need a dependent variable and one or more independent variables that could be used to predict the value of the dependent variable. Since I propose models that predict knowledge, my dependent variable has to be some measure of developer concept knowledge.
 Borrowing from existing computer science education research, I developed concept inventories for knowledge assessment. Traditionally, concept inventories are used to  assess conceptual knowledge and identify misconceptions; in Computer Science, the target audience is typically CS1 students~\cite{tew2010developing,kaczmarczyk2010identifying}. I will use concept inventories to assess what any developer knows, rather than what CS1 programmers do not know.
 
 I need to assess knowledge with a wide range of developers outside of academia, therefore I could not borrow directly from literature. So far I have created two concept inventories. The first was on null object dereferencing. For this concept inventory, I created 9 questions based on the chapters in~\cite{stuart2011building} and program analysis tool notifications relevant to the concept. Although findings from using this concept inventory are promising, we needed more validation to determine the usefulness of the concept inventory as a method of knowledge assessment. 
