Work for #15, #16, and #17

--- a/document/main.bib
+++ b/document/main.bib
@@ -1065,6 +1065,27 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	author={Tew, Allison Elliott},
 	year={2010}
 }
+@book{van2004concepts,
+	title={Concepts, techniques, and models of computer programming},
+	author={Van-Roy, Peter and Haridi, Seif},
+	year={2004},
+	publisher={MIT press}
+}
+@article{biggerstaff1994program,
+	title={Program understanding and the concept assignment problem},
+	author={Biggerstaff, Ted J and Mitbander, Bharat G and Webster, Dallas E},
+	journal={Communications of the ACM},
+	volume={37},
+	number={5},
+	pages={72--82},
+	year={1994}
+}
+@book{robillard2014recommendation,
+	title={Recommendation systems in software engineering},
+	author={Robillard, Martin P and Maalej, Walid and Walker, Robert J and Zimmermann, Thomas},
+	year={2014},
+	publisher={Springer}
+}
 @Manual{RSoftware,
 	title = {R: A Language and Environment for Statistical Computing},
 	author = {{R Core Team}},
