--- a/document/main.tex
+++ b/document/main.tex
@@ -131,9 +131,9 @@ Because the tools Valerie uses have no notion of what she does and does not know
 \end{figure}
 
 \subsection{What are program analysis tools?}
-Program analysis tools are tools designed to aide developers when developing software by automating the writing, analysis, and modification of source code.
+Program analysis tools are designed to aide developers when developing software by automating the writing, analysis, and modification of source code.
 Often, program analysis is discussed as synonymous with static analysis~\cite{nielson2015principles}. 
-For the purpose of my research, I define a program analysis tool as a tool that performs program analysis, whether it be static or dynamic analysis.
+For the purpose of my research, I define a program analysis tool as a recommendation system that performs program analysis, whether it be static or dynamic analysis, and provides information regarding the source code being analyzed~\cite{robillard2014recommendation}.
 Examples of program analysis tools include, but are not limited to, static code analyzers, code coverage tools, code smell detectors, and refactoring tools~\cite{adolph2011using,Murphy-Hill:2010:Ambient,ge2012reconciling}.
 In the following sections, I will define and discuss static analysis and dynamic analysis tools separately; the reader should note that although we discuss static and dynamic analysis separately, it is not uncommon to find program analysis tools that combine static and dynamic analysis~\cite{ernst2003static}.                                                
 
@@ -164,24 +164,44 @@ Notifications across tools vary; some provide lots of text (like FindBugs), some
 The goal of EclEmma notifications is to statically show dynamic program behavior and help the developer determine the effectiveness of her test suite. Though EclEmma could use text to communicate code coverage, this takes away the ability to scan the program for areas in most need of attention; therefore, EclEmma uses colors applied directly to the source code to communicate. EclEmma uses other visuals, such as the bar visuals in the Coverage View (Figure~\ref{fig:ecl}) to show coverage on a given package or class.
  % TODO talk about how different parts of notification communicate for each tool; make sure it ties back to goals (defects and test coverage)!
 
-The list of tools and notifications tools use can go on and on, but for the purposes of my research, the general definition I will use for a notification is \emph{a combination of visual and textual information used by a program analysis tool to communicate a message to developers.} Notifications can vary regarding what information and how much detail they provide, however, all notifications communicate about programming concepts, which I will discuss next.
+The list of tools and notifications tools use can go on and on, but for the purposes of my research, the general definition I will use for a notification is \emph{a combination of visual and textual information used by a program analysis tool to communicate a message to developers.} Notifications can vary regarding what information and how much detail they provide, however, there are commonalities across tool notifications, which I will discuss next.
 
-\subsection{What do tools communicate about?}
+\subsection{What are the typical components of a tool notification?}
+% based on robilliard book
 
-The goal of program analysis tool notifications is to communicate to the developer about their code. Any source code a developer writes maps to \emph{programming concepts}, which are often dependent on the programming language~\cite{jazayeri1997programming}. A programming concept can be as simple as the means for storing and passing data, such as variables, or as complex as the means for structuring data, such as generics. Notifications communicate about both simple and more complex programming concepts, and often communicate about multiple, typically related, concepts in a given notification. For example, the programming concepts in the notification in Figure~\ref{fig:eclipse} are variables, synchronization, lazy initialization, and multi-threading. The idea of a variable is a simpler concept that can be related to any number of other concepts. Synchronization, lazy initialization, and multi-threading, however, are more complex and relate to each other explicitly and exclusively. Lazy initialization is a specific approach to synchronization, both of which relate to multi-threading. The presence of these concepts narrows the concept of a variable in this notification to a variable in the context of a multi-threaded environment. 
+% recommendation systems break down: somethign to get attention, description
+% types of descriptions (text and visual)
+% goals of information provided (??)
 
+\subsection{What do tool notifications communicate about?}
 
-\subsection{How does tool communication relate to verbal communication?}
-To this point, I have talked about notifications as the means tools use to communicate with developers about their source code.
-The process of using a tool, specifically when presented with a notification, parallels the process of verbally communicating a message to an audience.
-In verbal communication, there is a speaker with a message; depending on how the speaker drafts and delivers the message dictates the receiver's ability to interpret and potentially act on the information provided~\cite{mustajoki2008modelling,bowman1987modeling}.
-% TODO more here on communication theory
+% communicate about the state of with source code
+The goal of program analysis tool notifications is to communicate to the developer about their source code.
+% source code maps to concepts (vann2004, biggerstaff); both human oriented and programming oriented concepts (biggerstaff)
+The source code a developers writes is a runnable manifestation of programming-oriented and human-oriented concepts~\cite{van2004concepts,biggerstaff1994program}. 
+At the lowest, most fundamental level, are \emph{programming-oriented concepts}, which relate to how the source code maps to programming language concepts.
+Programming concepts can be as simple as the means for storing and passing data, such as variables, or as complex as the means for structuring data, such as generics~\cite{jazayeri1997programming}.
+At a more abstract level, \emph{human-oriented concepts} relate to the high level goal of the source code, such as ``acquire target'' or ``complete transaction''.
 
-As with verbal communication, the ability of a developer to interpret a tool's message depends on how the message is composed and delivered.
-% TODO more here on similarities between verbal and tool comm (or explicit mapping to comm model?)
+Typically a given notification is associated with only one human-oriented concept.
+On the flip side, one notification can communicate about more than one programming-oriented concept. 
+Consider the following source code:
 
-\subsection{How do developers feel about program analysis tools?}
-% interactive interviews (icse) & %session study (fse)
+\begin{quotation}
+	\texttt{There will be some relevant code here :D}
+\end{quotation}
+
+The goal, or human-oriented concept, at play is ``write to file''. 
+A notification attached to this code is telling the developer something about the code she wrote to ``write to file''.
+There are multiple programming-oriented concepts at play, which aligns with the types of notifications the developer may get. 
+In the process of writing this code, the developer may get a notification regarding any number of programming-oriented concepts (buffered streams, exception handling); for example, tools like FindBugs, Sonar, and IntelliJ's built-in static analyzers notify developer when they have opened a stream (\texttt{BufferedWriter} in the above example) and there is a possibility the stream that is writing to the file will not close.
+A developer may also get a notification regarding exception handling. Here, the developer has written code to catch an \texttt{IOException} if it occurs. However, if she did not implement code to deal with the potential for an \texttt{IOException} she would get a notification communicating the need to do so.
+
+% TODO later, should note that focusing on programming oriented concepts because those generalize and are foundational to developing the abstractions that are human oriented concepts (biggerstaff)
+
+%Notifications communicate about both simple and more complex programming concepts, and often communicate about multiple, typically related, concepts in a given notification. For example, the programming concepts in the notification in Figure~\ref{fig:eclipse} are variables, synchronization, lazy initialization, and multi-threading. The idea of a variable is a simpler concept that can be related to any number of other concepts. Synchronization, lazy initialization, and multi-threading, however, are more complex and relate to each other explicitly and exclusively. Lazy initialization is a specific approach to synchronization, both of which relate to multi-threading. The presence of these concepts narrows the concept of a variable in this notification to a variable in the context of a multi-threaded environment. 
+
+\subsection{Are developers able to interpret tool notifications?}
 Despite the possibility provided by program analysis tools for exploration and improvement of source code, research has found that developers often to not use tools like FindBugs~\cite{Ayewah:2008:FindBugs}.
 Though research explored tool usage, there was no research that explored the reasons developers have for using the tools they do use and not using the tools they do not use~\cite{Bessey:2010:Coverity,Khoo:2008:PathProjection}.
 To answer the question \emph{why do developers not use static analysis tools}, I conducted interactive interviews with 20 professional developers to better understand why they do not use static analysis tools, one type of program analysis tool, when writing code~\cite{johnson2013don}.
@@ -189,10 +209,18 @@ Each interactive interview consisted of three parts: 1) an interview regarding p
 
 Based on the data from these interviews, the reasons developers do not frequently use static analysis tools are \textbf{Lack of collaborative support}, \textbf{Seemingly unorganized tool output}, \textbf{Poor support for customizations}, and \textbf{Difficult to interpret notifications}. 
 Three out of four findings regarding tool use pertain to the notifications tools use and how tools present information to the developer.
-Discovering that tool notifications are one of the reasons developers do not use program analysis tools is useful, however, not actionable. The next piece of information needed to make these findings actionable is to discover what about tool notifications make it difficult for developers to interpret their notifications. 
+Discovering that tool notifications are one of the reasons developers do not use program analysis tools is useful, however, not actionable. The next piece of information needed to make these findings actionable is to discover what about tool notifications make it difficult for developers to interpret their notifications.
 
-To answer the question \emph{why do developers encounter challenges when interpreting program analysis tool notifications?}, I observed 26 developers with varying backgrounds while they used three different program analysis tools: Eclipse Java compiler, FindBugs, and EclEmma. I presented participants with and asked them to interpret notifications from each of the three tools. Based on the challenges participants encountered, I propose a tool miscommunication theory that can be used to inform the design of program analysis tools.
+\subsection{What challenges do developers encounter when interpreting notifications?}
+% interactive interviews (icse) & %session study (fse)
+To answer the question \emph{why do developers encounter challenges when interpreting program analysis tool notifications?}, I observed 26 developers with varying backgrounds while they used three different program analysis tools: Eclipse Java compiler, FindBugs, and EclEmma. I presented participants with and asked them to interpret notifications from each of the three tools. 
 % TODO need something relevant to cross-tool!
+To identify challenges, we examined tool use through the lens of communication theory~\cite{bowman1987modeling}.
+Building on an existing model of (mis)communication~\cite{mustajoki2008modelling}, we identified 
+
+% TODO expand here! What did I do/find and how does it relate to communication/miscommunication??
+
+
 
 Based on findings from these studies, I identified the following problems with the state-of-the-art in program analysis tool notification design:
 
@@ -203,7 +231,7 @@ Based on findings from these studies, I identified the following problems with t
 
 \section{A Tool Miscommunication Theory}\label{sec:theory}
 %session study (fse)
-
+Based on the challenges participants encounter when interpreting tool notifications, I propose a tool miscommunication theory that can be used to inform the design of program analysis tools.
 Experts in qualitative research suggest that rather than presenting a set of disparate findings, qualitative researchers should instead produce an explanatory theory, a ``skeleton or framework that explains why things happen''~\cite{corbin2014basics}. While explicitly putting forward theories is rare in software engineering~\cite{hannay2007systematic}, one example is Lawrance and colleagues' theory of how programmers navigate code during debugging~\cite{lawrance2013programmers}. In the same way that Lawrance and colleagues' build on 
 information foraging theory~\cite{pirolli1999information}, my theory builds on communication theory~\cite{bowman1987modeling}.
 I summarize my theory as:
